# Oscilloscope

./: .gitignore  CMakeLists.txt  run.sh
cmake/: FindQt.cmake
include/controllers/: analyze.hpp  modeling.hpp  signal_list.hpp  thread.hpp  use_cases.hpp
include/models/: Signal.h  channel.hpp  parser.hpp  result.hpp  signal.hpp  time.hpp
include/models/Parsers/: Parser.h  Txtparser.h
include/models/signal_parsers/: istream_wrapper.hpp  txt_parser.hpp
include/views/: main_interface.hpp  modeling.hpp  modeling_choose.hpp  modeling_windows.hpp  nav_bar.hpp  plot.hpp  plots.hpp
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  analyze.cpp  modeling.cpp  signal_list.cpp  super_position.cpp  thread.cpp  use_cases.cpp
src/models/: CMakeLists.txt  Signal.cpp  channel.cpp  parser.cpp  result.cpp  signal.cpp  time.cpp
src/models/Parsers/: Parser.cpp  Txtparser.cpp
src/models/signal_parsers/: istream_wrapper.cpp  txt_parser.cpp
src/views/: CMakeLists.txt  main_interface.cpp  nav_bar.cpp  plot.cpp  plots.cpp
test/: CMakeLists.txt  channel_test.cpp  parser_test.cpp  result_test.cpp  signal_test.cpp  time_test.cpp
